# muggle-born-devops-app

./: .dockerignore  docker-compose.yml  fixtures.json  pyproject.toml
app/: settings.py  urls.py
haries/: admin.py  apps.py  models.py  urls.py  views.py
haries/migrations/: 0001_initial.py
haries/templates/: base.html
haries/templates/haries/: diary_detail.html  diary_list.html
