[tool.poetry]
name = "haries"
version = "0.1.0"
description = "Harry's personal diary"
authors = ["Nicolas Ledez <github.public@ledez.net>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Django = "^4.0.3"
psycopg2 = "^2.9.3"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
